// Copyright (c) 2020-2021 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTStorageNymList";
option optimize_for = LITE_RUNTIME;

import public "StorageBip47NymAddressIndex.proto";
import public "StorageItemHash.proto";

message StorageNymList {
    optional uint32 version = 1;
    repeated StorageItemHash nym = 2;
    repeated string localnymid = 3;
    repeated StorageBip47NymAddressIndex address = 4;
    repeated StorageBip47NymAddressIndex transaction = 5;
}
